# OpenCVFiles

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake
code/: DisplayImage.cpp  HarrisCorner.cpp  OpticalFlow.cpp  SIFTcode.cpp  VideoCamera.cpp  affinetransformation.cpp  drawcircles.cpp  smoothimage.cpp  third.cpp
