cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
add_executable( third third.cpp )
target_link_libraries( third ${OpenCV_LIBS} )
add_executable( SmoothImage smoothimage.cpp )
target_link_libraries( SmoothImage ${OpenCV_LIBS} )
add_executable( drawcircles drawcircles.cpp )
target_link_libraries( drawcircles ${OpenCV_LIBS} )
add_executable( affinetransformation affinetransformation.cpp )
target_link_libraries( affinetransformation ${OpenCV_LIBS} )
add_executable( findcontours findcontours.cpp )
target_link_libraries( findcontours ${OpenCV_LIBS} )
add_executable( SIFTcode SIFTcode.cpp )
target_link_libraries( SIFTcode ${OpenCV_LIBS} ${opencv_nonfree} )
add_executable( Video VideoCamera.cpp )
target_link_libraries( Video ${OpenCV_LIBS})
add_executable( corners HarrisCorner.cpp )
target_link_libraries( corners ${OpenCV_LIBS})
add_executable( OpticalFlow OpticalFlow.cpp )
target_link_libraries( OpticalFlow ${OpenCV_LIBS})
